# loop

./: .gitignore  Cargo.toml  README.md  build.rs
gui/: Cargo.toml
gui/src/: context.rs  lib.rs
history/: Cargo.toml
history/src/: lib.rs  table.rs  window.rs
history/src/types/: mod.rs  record.rs  status.rs
src/: autorun.rs  constants.rs  helpers.rs  history.rs  main.rs  preferences.rs
src/gui/: history_table.rs  history_window.rs  mod.rs
src/types/: record.rs  status.rs
