[package]
name = "loop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "loop.exe"
FileDescription = "Online status in your menu bar"

[dependencies]
image = "0.25.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
tao = "0.31.1"
tray-icon = { path="crates/tray-icon" }
winreg = "0.55.0"

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winnt"] }
