[package]
name = "loop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "loop.exe"
FileDescription = "Online status in your menu bar"

[dependencies]
image = "0.25.5"
reqwest = { version = "0.12.12", features = ["blocking"] }
tao = "0.31.1"
tray-icon = { path="crates/tray-icon" }
whoami = "1.5.2"
chrono = { version = "0.4.40", features = ["serde"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
native-dialog = "0.7.0"
windows-registry = "0.5.0"
windows-result = "0.3.1"

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winnt"] }
